upgraded to objects in LS

--- a/public/lists.html
+++ b/public/lists.html
@@ -36,7 +36,7 @@
     <main>
       <section id="myLists">
         <div>
-          <button class="collapsible" id="1">Week 1</button>
+          <button class="collapsible" id="Week1">Week 1</button>
           <div class="weekX">
             <ul>
               <li>burglar</li>
@@ -70,7 +70,7 @@
           </div>
         </div>
         <div>
-          <button class="collapsible" id="2">Week 2</button>
+          <button class="collapsible" id="Week2">Week 2</button>
           <div class="weekX">
             <ul>
               <li>burglar</li>
@@ -104,7 +104,7 @@
           </div>
         </div>
         <div>
-          <button class="collapsible" id="3">Week 3</button>
+          <button class="collapsible" id="Week3">Week 3</button>
           <div class="weekX">
             <ul>
               <li>burglar</li>
@@ -138,7 +138,7 @@
           </div>
         </div>
         <div>
-          <button class="collapsible" id="4">Week 4</button>
+          <button class="collapsible" id="Week4">Week 4</button>
           <div class="weekX">
             <ul>
               <li>unu</li>
@@ -155,7 +155,7 @@
           </div>
         </div>
         <div>
-          <button class="collapsible" id="5">Week 5</button>
+          <button class="collapsible" id="Week5">Week 5</button>
           <div class="weekX">
             <ul>
               <li>unu</li>
@@ -172,7 +172,7 @@
           </div>
         </div>
         <div>
-          <button class="collapsible" id="6">Week 6</button>
+          <button class="collapsible" id="Week6">Week 6</button>
           <div class="weekX">
             <ul>
               <li>unu</li>
