button for getData

--- a/public/table.html
+++ b/public/table.html
@@ -25,7 +25,7 @@
         <a title="Past Scores" class="nav-link" href="table.html">📅</a>
       </header>
       <h1>Student's points</h1>
-
+      <button id="getData">Get Data</button>
       <div id="div__pointsTable">
         <table id="pointsTable">
           <thead>
