--- a/public/index.html
+++ b/public/index.html
@@ -47,78 +47,82 @@
           ><a title="Make new list" class="nav-link" href="temporary.html"
             >⌨️</a
           ></span
-        >
-      </p>
-    </header> -->
+          >
+        </p>
+      </header> -->
     <main>
       <!--  <a target="_blank" href="https://icons8.com/icon/19295/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
 
       <!-- hide logo for now -->
       <!--  <nav class="nav">
-        <div><img src="/images/logo.png" class="nav__logo" alt="" /></div>
-        <ul>
-          <li><a href="#to-save">Home</a></li>
-          <li><a href="#random">Second</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav> -->
+          <div><img src="/images/logo.png" class="nav__logo" alt="" /></div>
+          <ul>
+            <li><a href="#to-save">Home</a></li>
+            <li><a href="#random">Second</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav> -->
 
       <!-- <h1 id="to-save">Students Points</h1> -->
       <section class="students">
-        <button class="studentJS itemCSS" id="@Lucas">
-          Lucas<span class="count"></span><span class="reduce">⭐</span>
-        </button>
-        <button class="studentJS itemCSS" id="@Jerry">
-          Jerry
-          <span class="count"></span><span class="reduce">⭐</span>
-        </button>
-        <button class="studentJS itemCSS" id="@Sharon">
-          Sharon<span class="count"></span
-          ><span class="reduce">⭐</span></button
-        ><button class="studentJS itemCSS" id="@Tanya">
-          Tanya<span class="count"></span><span class="reduce">⭐</span>
-        </button>
         <button class="studentJS itemCSS" name="Tony" id="@Tony">
-          Tony<span class="count"></span><span class="reduce">⭐</span></button
-        ><button class="studentJS itemCSS" id="@Eason">
+          Tony<span class="count"></span><span class="reduce">⭐</span>
+        </button>
+        <button class="studentJS itemCSS" id="@Eason">
           Eason<span class="count"></span><span class="reduce">⭐</span>
         </button>
-        <button class="studentJS itemCSS" id="@Eddie">
-          Eddie<span class="count"></span><span class="reduce">⭐</span>
-        </button>
-        <button class="studentJS itemCSS" id="@Joanna">
-          Joanna<span class="count"></span><span class="reduce">⭐</span>
-        </button>
+
         <button class="studentJS itemCSS" id="@Grace">
           Grace
           <span class="count"></span><span class="reduce">⭐</span>
         </button>
-        <button class="studentJS itemCSS" id="@Dora">
-          Dora<span class="count"></span><span class="reduce">⭐</span>
+        <button class="studentJS itemCSS" id="@Tanya">
+          Tanya<span class="count"></span><span class="reduce">⭐</span>
         </button>
-        <button class="studentJS itemCSS" id="@Charlotte">
-          Charlotte
-          <span class="count"></span><span class="reduce">⭐</span>
+        <button class="studentJS itemCSS" id="@Lucas">
+          Lucas<span class="count"></span><span class="reduce">⭐</span>
+        </button>
+        <button class="studentJS itemCSS" id="@Sharon">
+          Sharon<span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Cathy">
           Cathy
           <span class="count"></span><span class="reduce">⭐</span>
         </button>
-        <button class="itemCSS" disabled></button>
-        <button class="studentJS itemCSS" id="@Jenny">
-          Jenny<span class="count"></span><span class="reduce">⭐</span>
-        </button>
         <button class="studentJS itemCSS" id="@Pauline">
           Pauline
           <span class="count"></span><span class="reduce">⭐</span>
         </button>
+        <button class="studentJS itemCSS" id="@Jerry">
+          Jerry
+          <span class="count"></span><span class="reduce">⭐</span>
+        </button>
+        <button class="studentJS itemCSS" id="@Dora">
+          Dora<span class="count"></span><span class="reduce">⭐</span>
+        </button>
 
+        <button class="studentJS itemCSS" id="@Charlotte">
+          Charlotte
+          <span class="count"></span><span class="reduce">⭐</span>
+        </button>
+        <button class="studentJS itemCSS" id="@Eddie">
+          Eddie<span class="count"></span><span class="reduce">⭐</span>
+        </button>
+
+        <button class="itemCSS" disabled></button>
+
+        <button class="studentJS itemCSS" id="@Jenny">
+          Jenny<span class="count"></span><span class="reduce">⭐</span>
+        </button>
+        <button class="studentJS itemCSS" id="@Eva">
+          Eva<span class="count"></span><span class="reduce">⭐</span>
+        </button>
+        <button class="studentJS itemCSS" id="@Joanna">
+          Joanna<span class="count"></span><span class="reduce">⭐</span>
+        </button>
         <button class="studentJS itemCSS" id="@Emma">
           Emma
           <span class="count"></span><span class="reduce">⭐</span>
-        </button>
-        <button class="studentJS itemCSS" name="Arthur" id="@Arthur">
-          Arthur<span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="itemCSS" disabled></button>
 
@@ -130,7 +134,6 @@
           Mia
           <span class="count"></span><span class="reduce">⭐</span>
         </button>
-
         <button class="studentJS itemCSS" id="@Selina">
           Selina<span class="count"></span><span class="reduce">⭐</span>
         </button>
@@ -139,11 +142,9 @@
           Daniel
           <span class="count"></span><span class="reduce">⭐</span>
         </button>
-
         <button class="itemCSS" disabled></button>
-
-        <button class="studentJS itemCSS" id="@Eva">
-          Eva<span class="count"></span><span class="reduce">⭐</span>
+        <button class="studentJS itemCSS" name="Arthur" id="@Arthur">
+          Arthur<span class="count"></span><span class="reduce">⭐</span>
         </button>
 
         <button class="studentJS itemCSS" id="@Carissa">
