--- a/public/lists.html
+++ b/public/lists.html
@@ -33,6 +33,7 @@
       <a title="Make new list" class="nav-link" href="temporary.html">⌨️</a>
       <a title="Past Scores" class="nav-link" href="table.html">📅</a>
     </header>
+
     <main>
       <section id="myLists">
         <div>
@@ -195,5 +196,23 @@
         <div id="lists__box"></div>
       </section>
     </main>
+    <footer>
+      <div class="controls">
+        <div class="color">
+          <label for="color">Color:</label
+          ><input type="color" name="color" id="color" />
+        </div>
+        <div class="bg">
+          <label for="bg">Background:</label
+          ><input type="range" name="bg" id="bg" data-bg="%" />
+        </div>
+      </div>
+      <p class="clock">
+        <span class="hour">12</span>:<span class="min">43</span>:<span
+          class="sec"
+          >00</span
+        >
+      </p>
+    </footer>
   </body>
 </html>
