--- a/public/temporary.html
+++ b/public/temporary.html
@@ -46,6 +46,7 @@
           cols="20"
           rows="10"
         ></textarea>
+        <p class="invisible">blank</p>
       </div>
       <div class="buttons">
         <button class="createNew" id="createNew">New List</button>
